--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
-  "buildCommand": "next build",
-  "outputDirectory": ".next",
+  "builds": [
+    {
+      "src": "next.config.js",
+      "use": "@vercel/next"
+    }
+  ],
   "routes": [
     {
       "src": "/api/(.*)",
